--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ main{
   display: grid;
   grid-template-columns: 350px;
   grid-template-rows: repeat(3, 150px);
-  align-items: center;
   gap: 10px;
   height: 60%;
 }
@@ -57,6 +56,60 @@ main{
 .time p {
   padding: 10px;
 }
+
+/* CARD START */
+
+.card {
+  border: 2px solid green;
+  border-radius: 15px;
+  align-items: flex-end;
+  /* height: 250px; */
+  overflow: hidden;
+
+}
+
+.hero-img {
+  border: 2px solid lime;
+  display: flex;
+  justify-content: flex-end;
+  height: 40px;
+  margin-top: -10px;
+  padding: 0 20px 0 0;
+  overflow: hidden;
+
+}
+
+.hero-img img {
+  width: 70px;
+  height: 70px;
+}
+
+.card-info {
+  border: 2px solid cyan;
+  padding: 0 20px;
+  border-radius: 15px;
+}
+
+header {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+header, .card-desc, .time-period {
+  border: 2px solid purple;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+
+}
+
+.hours {
+  font-size: 40px;
+}
+
+
+/* CARD END */
 
 /* Report for
   Jeremy Robson
