--- a/style.css
+++ b/style.css
@@ -32,18 +32,24 @@ body {
 
 main{
   /* border: 1px solid orange; */
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .container {
-  /* border: 1px solid orangered; */
+  /* border: 2px solid red; */
   display: grid;
   grid-template-columns: 1fr;
-  /* grid-template-rows: repeat(3, 150px); */
   grid-auto-rows: 150px;
-  
-  grid-gap: 10px;
-  height: 60%;
+  grid-gap: 25px;
+  height: 100%;
+}
+
+.card-container{
+  /* border: 5px solid black; */
+  width: 100%;
 }
 
 .user-box {
@@ -52,8 +58,17 @@ main{
   border-radius: 10px;
 }
 
+.profile-pic {
+  /* border: 2px solid orange; */
+  margin: 0 12px 0 0;
+}
+
 .profile-pic img {
   width: 60px;
+  border: 2px solid white;
+  border-radius: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 .user-info {
@@ -61,28 +76,39 @@ main{
   color: white;
   background-color: var(--Violet-social);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   border-radius: 10px;
-  padding: 15px 55px;
+  padding: 15px 15px;
+}
+
+.user-info p:first-child {
+  font-size: 14px;
+}
+
+.user-info p:last-child {
+  font-size: 22px;
+  
 }
 
 .user-details {
+  /* border: 2px solid orange; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-weight: 300;
 }
 
 .time {
   /* border: 2px solid purple; */
-  color: var(--Pale-Blue);
+  color: var(--Desaturated-blue);
   display: flex;
   justify-content: space-between;
-  margin: 0 25px;
+  margin: 8px 25px;
   font-size: 20px;
 }
 
 .active {
-  color: red;
+  color: var(--Pale-Blue);
 }
 
 .time p {
@@ -92,17 +118,16 @@ main{
 /* CARD START */
 
 .card {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   background-color: var(--Light-red-work);
   border-radius: 15px;
   align-items: flex-end;
-  /* height: 250px; */
   overflow: hidden;
-
+  margin: 0 0 15px 0;
 }
 
 .hero-img {
-  border: 2px solid lime;
+  /* border: 2px solid lime; */
   background-color: var(--Light-red-work);
   display: flex;
   justify-content: flex-end;
@@ -119,32 +144,145 @@ main{
 }
 
 .card-info {
-  border: 2px solid cyan;
-  color: white;
+  /* border: 2px solid cyan; */
+  color: var(--Desaturated-blue);
   background-color: var(--Dark-blue);
   padding: 0 20px;
   border-radius: 15px;
-  height: 120px;
+  height: 100px;
 }
 
 header {
   font-size: 18px;
-  /* margin-top: 20px; */
+  font-weight: 500;
+  color: white;
 }
 
 header, .card-desc, .time-period {
-  border: 2px solid purple;
+  /* border: 1px solid purple; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   padding-top: 15px;
-
-
 }
 
 .hours {
-  font-size: 40px;
+  color: white;
+  font-size: 30px;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
 }
 
+.time-period {
+  padding: 0;
+}
 
+@media screen and (min-width: 768px) {
+  .container {
+    grid-auto-rows: 150px;
+    height: 100%;
+  }
+
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
+    grid-auto-rows: 162px;
+    gap: 18px;
+  }
+  
+  .card {
+    margin: 0;
+  }
+
+  .card-info {
+    height: 140px;
+    padding-top: 18px;
+  }
+
+  .user-box{
+    grid-column: 1 / 3;
+  }
+
+  .profile-pic {
+    margin-right: 25px;
+  }
+
+  .user-info {
+  justify-content: center;
+  }
+
+  .time {
+    margin: 0 160px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    display: block;
+  }
+
+  .container {
+    display:  grid;
+    grid-template-columns: 200px repeat(3, 220px);
+    grid-auto-rows: 382px;
+  }
+
+
+  .card-container {
+    grid-template-columns: repeat(3, 220px);
+    grid-auto-rows: 180px;
+  }
+
+  .user-box {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    /* order: 1; */
+  }
+
+  .card-desc {
+    display: block;
+  }
+
+  .card-info {
+    padding-bottom: 20px;
+  }
+
+  .hours {
+    margin-bottom: 10px;
+    
+  }
+
+  .user-info {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 250px;
+    padding: 0 0 0 25px;
+  }
+
+  .user-info img {
+    margin: 12px 0 0 0;
+  }
+  
+  .user-info p:last-child {
+    font-size: 30px;
+    margin: 0 25px 20px 0;
+  }
+
+  .time-period {
+    justify-content: flex-start;
+  }
+
+  .time {
+    flex-direction: column;
+    margin: 8px 25px;
+    font-size: 16px;
+
+  }
+
+  .time p {
+    padding: 8px;
+  }
+}
