--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ header, .card-desc, .time-period {
   }
 
   .user-box{
-    grid-column: 1 / 3;
+    /* grid-column: 1 / 3; */
   }
 
   .profile-pic {
